--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       
         <!-- Camera -->
         <a-entity camera="far: 100;" look-controls position="0 1.2 0"></a-entity>
-        <a-entity gltf-model="#room" position="0 0 0" ></a-entity>
+        <a-entity gltf-model="#chair" position="0 0.7 0" scale="0.7 0.7 0.7" rotation="0 180 0"></a-entity>
 
  
       </a-entity>
@@ -54,7 +54,7 @@
 
       <a-entity gltf-model="#room" position="6.5 0 -6.5" ></a-entity>
       <a-entity gltf-model="#furniture" position="6.5 0 -6.5" ></a-entity>
-      <a-entity gltf-model="#navmesh" nav-mesh visible="false" position="6.5 0 -6.5" >
+      <a-entity gltf-model="#navmesh" nav-mesh visible="false" position="6.5 0.01 -6.5" >
       
     </a-scene>
     <script src="js/bundle.js"></script>
