selectable furniture with label

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,7 @@
       </a-entity>
       
 
-
-      <a-entity geometry="primitive:box" position="-2.3 0.5 -4.5" switch-furniture material="color:red"></a-entity>
-
-
+      <a-entity geometry="primitive:box;height:1;depth:1.1;width:1.9" position="1.86577 0.5 -1.02765" label-furniture="name"></a-entity>
 
       <!-- room and Nav-mesh -->
 
